# webrtc-server

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md  output.opus
src/: former_main.rs  lib.rs  main-encoder.rs  main.rs  messages.rs
src/live_streaming/: broadcast.rs  mod.rs  save_to_disc.rs  user_socket.rs
src/static/js/: chat.js  index.js  webinar.js
templates/: chat.html.tera  index.html.tera  webinar.html.tera
