[package]
name = "webrtc-streaming-actix"
version = "0.1.0"
edition = "2021"
description = "WebRTC streaming server using actix-web"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
actix-web-actors = "4.3.0"
async-broadcast = "0.7.0"
clap = { version = "4.5.3", features = ["derive"] }
opentelemetry-stdout = { version = "0.3.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = ["metrics", "default", "rt-tokio-current-thread"] }
sfu = "0.0.3"
tera = "1.19.1"
webrtc = "0.10.1"
wg = "0.8.1"
anyhow = "1.0.81"
crossbeam-channel = "0.5.12"
env_logger = "0.11.3"
chrono = "0.4.35"
# RTC protocols
shared = { version = "0.1.1", package = "rtc-shared" }
sdp = { version = "0.1.1", package = "rtc-sdp" }
stun = { version = "0.1.1", package = "rtc-stun" }
rtp = { version = "0.1", package = "rtc-rtp" }
rtcp = { version = "0.1", package = "rtc-rtcp" }
srtp = { version = "0.1.1", package = "rtc-srtp" }
dtls = { version = "0.1.1", package = "rtc-dtls" }
sctp = { version = "0.1.1", package = "rtc-sctp" }
datachannel = { version = "0.1", package = "rtc-datachannel" }
retty = "0.27.0"
bytes = "1.5"
log = "0.4"
base64 = "0.22"
serde = "1"
serde_json = { version = "1", features = [] }
rand = "0.8"
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
ring = "0.17"
sha2 = "0.10"
rustls = "0.22"
url = { version = "2", features = [] }
hex = { version = "0.4", features = [] }
opentelemetry = { version = "0.22.0", features = ["metrics"] }
# sync_chat
ctrlc = "3.4"

# async_chat
futures = "0.3"
smol = "2"
waitgroup = "0.1"
core_affinity = "0.8"
num_cpus = "1.16"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
systemstat = "0.2.3"
rustls-pemfile = "2.1.1"
webtransport = "0.0.0"
wtransport = "0.1.12"
tracing = "0.1.40"
http = "1.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.5"
